--- a/Calci.css
+++ b/Calci.css
@@ -377,3 +377,11 @@ body {
 .first-main {
     padding: 10px;
 }
+
+@media (width<=360px) {
+    .main-box {
+        margin: 10px;
+        width: 250px;
+    }
+
+}
