--- a/Calci.css
+++ b/Calci.css
@@ -374,14 +374,18 @@ body {
     font-size: 1rem;
 }
 
-.first-main {
+/* .first-main {
     padding: 10px;
-}
+} */
 
 @media (width<=360px) {
     .main-box {
         margin: 10px;
-        width: 250px;
+        width: auto;
+        display: flex;
+
+        justify-content: space-around;
+        flex-direction: column;
     }
 
 }
